[package]
name = "reboot-with-passphrase"
version = "0.1.0"
edition = "2021"
authors = ["Ohad Lutzky <lutzky@gmail.com>"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
color-eyre = "0.6.2"
libc = "0.2.138"
rpassword = "7.2.0"
shell-escape = "0.1.5"
